[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "acme-dns-azure"
version = "0.1.0"
description = "ACME client setup based on Certbot for dns-01 challenges via Azure Cloud services"
license = "MIT"
keywords = [
    "acme", "dns", "azure", "certbot", "letsencrypt",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
authors = [
    "ZEISS Digital Innovation Partners"
]
readme = "README.md"
repository = "https://github.com/ZEISS/acme-dns-azure"
packages = [
    { include = "acme_dns_azure" },
]
exclude = [ "" ]

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = ">=3"
certbot = ">=2"
certbot-dns-azure = ">=2"
requests = ">=2"
strictyaml = "^1.7.3"
azure-identity = ">=1.14.0"
azure-keyvault-secrets = ">=4.7.0"
azure-keyvault-certificates = ">=4.7.0"
# Optional dependencies required by some targets
azure-functions = { version = ">=1", optional = true }  # functions

[tool.poetry.extras]
functions = ["azure-functions"]
# Extra "full" list must contain all other extras
full = ["azure-functions"]

[tool.poetry.dev-dependencies]
pytest = "*"
mock = "*"
pytest-cov = "*"
coverage = "*"
pytest-xdist = "*"
vcrpy = "*"
flake8 = "*"
isort = "*"
tox = ">=4"
black = { version = "*", allow-prereleases = true }
mypy = "*"
types-PyYAML = "*"
types-pytz = "*"
types-requests = "*"
types-six = "*"
types-toml = "*"
types-simplejson = "*"

[tool.poetry.scripts]
acme-dns-azure = "acme_dns_azure.cli:main"

[tool.mypy]
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-s -v --durations=0"
cache_dir = ".cache/pytest_cache"

[tool.coverage.run]
branch = true
source = ["acme_dns_azure"]
command_line = "-m pytest --junitxml=test-results/unittests.xml"
omit = [
    "acme_dns_azure/___init___.py",
    "acme_dns_azure/tests/*"
]

[tool.coverage.report]
show_missing = true

[tool.coverage.xml]
output = "coverage.xml"