[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = [
  "Felix Bechter <felix.bechter@zeiss.com>",
  "Christoph Hoth <christoph.hoth@zeiss.com>",
  "Brian Rimek <brian.rimek@zeiss.com>",
]
description = "ACME DNS Azure Function example"
include = [
  {path = ".python_packages/**/*"},
]
license = "Proprietary"
name = "acme-dns-azure-function"
packages = [
  {include = "host.json"},
  {include = "version.py"},
  {include = "function_app.py"},
]
readme = "README.md"
version = "0.1.2a6"

[tool.poetry_bumpversion.file."version.py"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
add-plugins = "poetry:add_plugins"
build = "poetry:build"
start = "poetry:start_function"
test = "poetry:test"
